Added ControllerAdvice to intercept errors and provide clear messages for the client. Updated the error handling logic for better user clarity and implemented logging.